# pyworld_gcr

./: .gitignore  .replit  README.md  app.py  main.py  pyproject.toml  pytest.py  server.py  test_app.py
myworld3/: __init__.py
myworld3/models/: __init__.py  base_model.py  gcr_model.py
myworld3/output/: baseline_results.csv  gcr_results.csv
myworld3/utils/: __init__.py  plotly_viz.py  plotting.py
templates/: base.html  dashboard.html  index.html  simulation.html
