[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "World3 system dynamics simulation visualization"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "oauthlib>=3.2.2",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pyworld3==1.0.0",
]
